Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6, 10.9(EOL), 10.10(EOL)
-
None
-
Can result in unexpected behaviour
-
Q3/2026 Server Maintenance
Description
CREATE TABLE t ( |
path VARCHAR(100) NOT NULL COLLATE 'utf8_general_ci', |
json_c1 JSON NOT NULL DEFAULT '' COLLATE 'utf8mb4_bin', |
json_c2 JSON NOT NULL DEFAULT '' COLLATE 'utf8mb4_bin', |
comment VARCHAR(100) NULL DEFAULT NULL COLLATE 'utf8_general_ci', |
UNIQUE INDEX path (path), |
CONSTRAINT json_c1 CHECK (path > 0) |
)
|
;
|
select * from information_schema.check_constraints where table_name='t'; |
another example
create table t (a int check (a>2), constraint a check (a < 5)); |
select * from information_schema.check_constraints where table_name='t'; |
Attachments
Issue Links
- blocks
-
MDEV-30899 Fail to drop CHECK constraint
-
- In Review
-
- relates to
-
MDEV-16630 Ambiguous error message when check constraint matches table name
-
- Closed
-
-
MDEV-24601 INFORMATION_SCHEMA doesn't differentiate between column- and table-level CHECK constraints
-
- Closed
-
-
MDEV-24602 cannot specify a name for a column check constraint
-
- In Review
-
- links to