MDEV-24598: duplicate CHECK constraint name

- Name of the field check constraint is the same as the name of the
field.
- Add check of field name and table constraint names,
  that is done during `mysql_prepare_create_table()`
- Closes PR #2773

- Reviewer: <>