sql/sql_table.cc
@@ -4565,6 +4565,20 @@ without_overlaps_err:
     {
       if (check->name.length && !check->automatic_name)
       {
+        /* Check that there is no same field and table CHECK constraint names*/
+        while((dup_field=it2++))
+        {
+          if (!lex_string_cmp(system_charset_info,
+                              &check->name, &dup_field->field_name))
+          {
+            my_error(ER_DUP_CONSTRAINT_NAME, MYF(0), "CHECK", check->name.str);
+            DBUG_RETURN(TRUE);
+          }
+        }
+        it2.rewind();
+      }
+
+      {
         /* Check that there's no repeating table CHECK constraint names. */
         List_iterator_fast<Virtual_column_info>
           dup_it(alter_info->check_constraint_list);
